--- a/about.qmd
+++ b/about.qmd
@@ -6,10 +6,10 @@ about:
   links:
     - icon: linkedin
       text: LinkedIn
-      href: https://linkedin.com
+      href: https://www.linkedin.com/in/trevor-tomlin/
     - icon: github
       text: Github
-      href: https://github.com
+      href: https://github.com/trevortomlin
 
 ---
 
