--- a/posts/ckks/index.qmd
+++ b/posts/ckks/index.qmd
@@ -151,18 +151,32 @@ It is defined as $proj_\beta z = \frac{z * \beta}{\left\| \beta \right\|} * \bet
 After that we will have a polynomial that has the same bases of $\sigma(\mathcal{R})$, but we still need to round it so that it has integer coefficients.
 
 ```{python}
-def coordinate_wise_randomized_rounding(coordinates):
-    r = coordinates - np.floor(coordinates)
-    f = np.array([np.random.choice([c, c-1], 1) for c in r]).reshape(-1)
-    rounded_coordinates = coordinates + f
-    rounded_coordinates = [int(coeff) for coeff in rounded_coordinates]
-    return rounded_coordinates
-```
+def rand_round(x: float) -> int:
+    decimal = x - np.floor(x)
+    f = np.random.choice([decimal-1, decimal])
+    return int(x + f)
 
-```{python}
-def discretization():
-    pass
-    
+
+def cwrr(coords: np.ndarray) -> np.ndarray:
+    out = []
+
+    for coord in coords:
+        real = coord.real
+        imag = coord.imag
+        
+        real_round = rand_round(real)
+        imag_round = rand_round(imag)
+
+        out.append(real_round + imag_round * 1j)
+
+    return np.array(out)
+
+
+def discretization(z: np.ndarray):
+    bases = np.vander(primitive_nth_roots_of_unity(2*N), N, increasing=True).T
+    proj = np.array([np.vdot(z, b) / np.vdot(b,b) for b in bases])
+
+    return bases.T @ cwrr(proj)
 ```
 
 ```{python}
@@ -177,15 +191,31 @@ def pi_inverse(z: np.ndarray) -> np.ndarray:
     return np.concatenate([z, [np.conjugate(x) for x in z[::-1]]])
 
 
-def cwrr(coords):
-    decimals = coords - np.floor(coords)
-    f = np.array([np.random.choice([a-1, a], 1) for a in decimals]).reshape(-1)
-    return np.array([int(coord) for coord in coords + f])
+def rand_round(x: float) -> int:
+    decimal = x - np.floor(x)
+    f = np.random.choice([decimal-1, decimal])
+    return int(x + f)
+
+
+def cwrr(coords: np.ndarray) -> np.ndarray:
+    out = []
+
+    for coord in coords:
+        real = coord.real
+        imag = coord.imag
+        
+        real_round = rand_round(real)
+        imag_round = rand_round(imag)
+
+        out.append(real_round + imag_round * 1j)
+
+    return np.array(out)
 
 
 def discretization(z: np.ndarray):
     bases = np.vander(primitive_nth_roots_of_unity(2*N), N, increasing=True).T
-    proj = np.array([np.real(np.vdot(z, b) / np.vdot(b,b)) for b in bases])
+    proj = np.array([np.vdot(z, b) / np.vdot(b,b) for b in bases])
+
     return bases.T @ cwrr(proj)
 
 
